--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 
 .btn-primary {
     margin: 20px;
+    background-color: #48D1CC;
+    border-color: #48D1CC;
 }
 
 h1 {
@@ -32,7 +34,7 @@ h1 {
     width: 200px;
     height: 35px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    bottom: 20px;
+    bottom: 10px;
     padding: 5px;
     margin: 15px;
     /* right: 20px; */
@@ -56,5 +58,12 @@ h1 {
   #profilePic {
       float: left;
       height: 200px;
+      margin: 10px;
+  }
+
+  .group:after {
+    content: "";
+    display: table;
+    clear: both;
   }
 
